gccida/g0/fibheap_consolidate
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_consolidate/src/fibheap.c:861:1: error: use of undeclared identifier 'fibonacci_heap'
fibonacci_heap<long, basic_block_def>::remove_root( heap, w); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_consolidate/src/fibheap.c:861:16: error: expected expression
fibonacci_heap<long, basic_block_def>::remove_root( heap, w); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_consolidate/src/fibheap.c:881:1: error: use of undeclared identifier 'fibonacci_heap'
fibonacci_heap<long, basic_block_def>::insert_root( heap, a[i]); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_consolidate/src/fibheap.c:881:16: error: expected expression
fibonacci_heap<long, basic_block_def>::insert_root( heap, a[i]); 
               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_consolidate/src/obj/fibheap.o] Error 1
